# information-measures-neutrosophic-fuzzy-multi-criteria

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: examples.md  motivation.md  setup.md
examples/: demo.py
src/imnfs/: __init__.py  exceptions.py
src/imnfs/core/: __init__.py  decision_maker.py
src/imnfs/io/: __init__.py  loader.py
src/imnfs/measures/: __init__.py  base.py  factory.py  similarity.py
src/imnfs/model/: __init__.py  nfs.py  rnf.py
src/imnfs/operations/: __init__.py  entropy_calculator.py  ranking_calculator.py  similarity_calculator.py  weight_calculator.py
test/integration/: test_algo.ipynb  test_decision_maker.ipynb
test/integration/data/: experiment.csv
test/unit/: test_model_nfs.ipynb  test_rmf.ipynb  test_similarity_measures.ipynb
