[tool.poetry]
name = "imnfs"
version = "0.1.0"
description = "This project introduces similarity-based information measures (entropy and cross-entropy) for neutrosophic fuzzy sets (NF-sets), a hybrid combining fuzzy and neutrosophic sets for indeterminate data. It includes theorems proving properties and an improved multi-criteria decision-making algorithm for qualitative and quantitative aspects."
authors = ["AlexNhat <anhnhat909940@gmail.com>"]
readme = "README.md"
packages = [{ include = "imnfs", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.26.4"
pandas = "2.2.3"
openpyxl = "3.1.5"
streamlit = "1.39.0"
latexify-py = ">=0.4.4,<0.5.0"
matplotlib = ">=3.10.7,<4.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

[tool.poetry.scripts]
imnfs-run = "imnfs.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
